--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -1,11 +1,23 @@
+:root {
+  --blue: #4d5ae5;
+  --white: #f4f4fd;
+  --grey: #ffffff;
+  --cloud: #f4f4fd;
+  --black: #8e8f99;
+  --sky: #404bbf;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
   color: #434455;
+  line-height: 1, 5;
   background-color: #fff;
+}
+
+a {
+  text-decoration: none;
 }
 
 ul {
@@ -24,8 +36,6 @@ p {
 
 img {
   display: block;
-  width: 100%;
-  height: auto;
 }
 
 input,
@@ -33,38 +43,14 @@ textarea {
   font-family: inherit;
 }
 
-html,
-body {
-  overflow-x: hidden;
-}
-
-a {
-  text-decoration: none;
-}
-
 .container {
+  max-width: 1158px;
   min-width: 320px;
+  padding: 0 15px;
   margin: 0 auto;
-  padding: 0 16px;
-}
-
-.visually-hidden {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+  justify-content: space-between;
+  align-items: center;
+  overflow-x: hidden;
 }
 
 .header {
@@ -75,8 +61,13 @@ a {
 }
 
 .header-container {
-  padding-top: 16px;
-  padding-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
 }
 
 .logo-web {
@@ -99,67 +90,17 @@ a {
 }
 
 .menu {
-}
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 72px 24px 40px 16px;
-  background-color: #fff;
-  z-index: 999;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.modal-button-menu {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  border-radius: 50%;
-  background-color: #e7e9fc;
-  stroke-width: 1px;
-  stroke: #2e2f42;
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding: 0;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
-    0 2px 1px 0 rgba(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.menu-item {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 120%;
-  letter-spacing: 0.02em;
-  color: #434455;
-  margin-bottom: 40px;
-}
-
-.menu-item:last-child {
-  margin-bottom: 168px;
+  gap: 40px;
 }
 
 .menu-link {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 111%;
+  display: block;
+  padding: 24px 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
 
@@ -183,7 +124,6 @@ a {
   border-radius: 2px;
 
   background-color: #404bbf;
-  display: none;
 }
 
 .menu-link:hover,
@@ -193,19 +133,13 @@ a {
 
 .adress {
   font-style: normal;
-}
-
-.menu-item-address {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 120%;
-  letter-spacing: 0.02em;
-  color: #434455;
-  margin-bottom: 24px;
+  margin-left: auto;
 }
 
 .contacts-list {
+  display: flex;
+  gap: 40px;
+  align-items: center;
 }
 
 .contacts-info {
@@ -224,33 +158,15 @@ a {
   color: #404bbf;
 }
 
-.icons-list-menu {
-  display: flex;
-  justify-content: left;
-  gap: 40px;
-  margin: 40px 0px;
-}
+/* Title and Button Section1 */
 
-.burger {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  border: none;
-  background-color: transparent;
-  width: 24px;
-  height: 24px;
-  padding: 0;
-}
-
-.burger-icon {
-}
-
-/* ---------Title and Button Section1------------ */
 .section {
-  padding-top: 72px;
-  padding-bottom: 72px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
+
 .tit-a-but {
+  padding: 188px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
@@ -260,37 +176,38 @@ a {
     url(../images/office.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  max-width: 1440px;
   background-position: center;
   margin: 0 auto;
 }
 
 .title {
+  color: #ffffff;
+  font-size: 56px;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 111%;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #fff;
-  max-width: 216px;
+  max-width: 496px;
   margin: 0 auto;
 }
 
 .btn {
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.04em;
   background-color: #4d5ae5;
-  color: #fff;
-  border-radius: 4px;
-  padding: 16px 32px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  cursor: pointer;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   min-width: 169px;
   height: 56px;
-  cursor: pointer;
   border: none;
-  margin: 72px auto 0px;
+  border-radius: 4px;
   display: block;
+  margin: 48px auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn:hover {
@@ -300,127 +217,112 @@ a {
   background-color: #404bbf;
 }
 
-/* -----------Description Section2---------------- */
-.section {
-}
+/*  Description Section2 */
 .des-sec {
-  padding-top: 96px;
-  padding-bottom: 96px;
-  text-align: center;
+  padding: 120px 0;
 }
-.container {
-}
+
 .visually-hidden {
-}
-.description-list {
-}
-.description-text {
-}
-.description-icons {
-  display: none;
-}
-.description-list-title {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 111%;
-  letter-spacing: 0.02em;
-  text-align: center;
   color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.description-list {
+  display: flex;
+  gap: 24px;
+  list-style-type: none;
+}
+
+.description-text {
+  width: calc((100% - 72px) / 4);
+}
+
+.description-icons {
+  fill: ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
   margin-bottom: 8px;
 }
+
+.description-list-title {
+  color: #2e2f42;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+
 .ph-text {
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
   font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
+  font-weight: 400;
   color: #434455;
-  margin-bottom: 72px;
+  letter-spacing: 0.02em;
+  line-height: 1.5;
 }
 
-.ph-text:nth-last-child(4) {
-  margin-bottom: 0;
-}
-
-/* ---------Team Photo Section3-------------- */
-.section {
-}
+/* Team Photo Section3 */
 .team-photo {
-  padding-top: 96px;
-  padding-bottom: 96px;
+  padding: 120px 0;
   background-color: #f4f4fd;
 }
-.team-photo {
-}
-.container {
-}
+
 .team-photo-title {
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
   font-size: 36px;
-  line-height: 111%;
-  letter-spacing: 0.02em;
+  line-height: 1.11;
   text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
-  text-transform: capitalize;
-}
-.team-list {
-  display: flex;
-  flex-direction: column;
-  gap: 72px;
-}
-.team-photo-list {
-  border-radius: 0px 0px 4px 4px;
-  transition: cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.team-photo-list:hover {
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background-color: #fff;
+.team-list {
+  display: flex;
+  gap: 24px;
+  list-style-type: none;
 }
+
 .name-container {
   padding: 32px 0;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: #fff;
 }
-.name {
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 120%;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-}
-.proffesion {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #434455;
-}
+
 .icons-list {
   display: flex;
   justify-content: center;
   gap: 24px;
-  margin: 8px;
+  margin: 8px 16px 0 16px;
 }
+
 .icons-punkt {
   width: 40px;
   height: 40px;
 }
+
 .icons-item {
   width: 100%;
   height: 100%;
-  background-color: #4d5ae5;
+  background-color: var(--blue);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -432,19 +334,50 @@ a {
 .icons-item:focus {
   background-color: #404bbf;
 }
+
 .social {
-  fill: #fff;
+  fill: var(--cloud);
 }
 
-/* -----------Section4 Portfolio----------- */
-.section {
+.team-photo-list {
+  background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  transition: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+.team-photo-list:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background-color: #fff;
+}
+
+.name {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.proffesion {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  text-align: center;
+}
+
+/* Section4 Portfolio */
 .portfolio {
-  padding-top: 96px;
-  padding-bottom: 96px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
-.container {
-}
+
 .portfolio-title {
   font-size: 36px;
   line-height: 1.11;
@@ -457,11 +390,14 @@ a {
 
 .portfolio-list {
   display: flex;
-  flex-direction: column;
-  gap: 48px;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+  list-style-type: none;
 }
 
 .portfolio-item {
+  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   overflow: hidden;
@@ -487,7 +423,7 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #fff;
+  color: var(--white);
   padding: 40px 32px;
   background-color: #4d5ae5;
   width: 100%;
@@ -495,11 +431,13 @@ a {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .portfolio-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
 }
+
 .portfolio-text {
   font-weight: 500;
   font-size: 20px;
@@ -508,6 +446,7 @@ a {
   color: #2e2f42;
   margin-bottom: 8px;
 }
+
 .portfolio-p {
   font-size: 16px;
   line-height: 1.5;
@@ -515,18 +454,23 @@ a {
   color: #434455;
 }
 
-/* ----------Footer Info----------- */
+/* Footer Info */
 .footer {
   background: #2e2f42;
-  padding: 96px 0;
+  padding: 100px 0;
+  position: relative;
 }
-.container {
-}
+
 .dop-container {
-  text-align: center;
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-start;
 }
+
 .footer-info {
+  margin-right: 120px;
 }
+
 .logo-web-f {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -538,6 +482,7 @@ a {
   margin-bottom: 16px;
   display: inline-block;
 }
+
 .logo-studio-f {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -545,37 +490,38 @@ a {
   color: #f4f4fd;
   text-transform: uppercase;
 }
+
 .footer-text {
   color: #f4f4fd;
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
-  margin-bottom: 72px;
+  margin: 0;
 }
-.icons {
-}
+
 .social-par {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #fff;
+  color: var(--grey);
   margin-bottom: 16px;
 }
+
 .footer-icons-list {
   display: flex;
   gap: 16px;
-  justify-content: center;
-  margin-bottom: 72px;
 }
+
 .footer-icons-punkt {
   width: 40px;
   height: 40px;
 }
+
 .footer-icons-item {
   width: 100%;
   height: 100%;
-  background-color: #4d5ae5;
+  background-color: var(--blue);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -591,8 +537,19 @@ a {
 .footer-social {
   fill: #f4f4fd;
 }
+
 .footer-form-container {
+  margin-left: 80px;
 }
+
+.footer-form {
+  display: flex;
+  gap: 24px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .footer-form-par {
   margin-bottom: 16px;
   font-weight: 500;
@@ -601,10 +558,7 @@ a {
   letter-spacing: 0.02em;
   color: #fff;
 }
-.footer-form {
-}
-.footer-form-email {
-}
+
 .footer-input {
   border: 1px solid #fff;
   background-color: transparent;
@@ -619,7 +573,6 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   padding-left: 16px;
-  margin-bottom: 16px;
 }
 
 .footer-input::placeholder {
@@ -643,14 +596,15 @@ a {
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
-  margin: 0 auto;
 }
+
 .but-fly-icon {
   fill: #fff;
   margin-left: 16px;
 }
 
-/* ---------- Modal window------------ */
+/* Modal window */
+
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -661,12 +615,13 @@ a {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.is-hidden {
   opacity: 0;
   pointer-events: none;
-  visibility: hidden;
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .modal {
@@ -674,8 +629,8 @@ a {
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
   border-radius: 4px;
-  width: 288px;
-  min-height: 623px;
+  width: 408px;
+  min-height: 584px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -683,6 +638,7 @@ a {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
 }
+
 .modal-button {
   position: absolute;
   top: 24px;
@@ -713,10 +669,16 @@ a {
   fill: #fff;
 }
 
+.modal-button:focus .modal-button-close {
+  fill: #ffffff;
+}
+
 .modal-button-close {
   fill: #2e2f42;
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-par {
   font-weight: 500;
   font-size: 16px;
@@ -726,15 +688,22 @@ a {
   color: #2e2f42;
   margin-bottom: 16px;
 }
+
 .form {
-  max-width: 256px;
+  max-width: 360px;
 }
+
 .form-container {
   position: relative;
-  max-width: 256px;
+  max-width: 360px;
   height: 58px;
   margin-bottom: 8px;
 }
+
+.form-container-input {
+  position: relative;
+}
+
 .form-label {
   display: block;
   margin-bottom: 4px;
@@ -746,8 +715,7 @@ a {
 
   flex-direction: column;
 }
-.form-container-input {
-}
+
 .form-input {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
@@ -766,6 +734,7 @@ a {
 .form input:focus + svg {
   fill: #4d5ae5;
 }
+
 .form-icon {
   position: absolute;
   top: 50%;
@@ -773,9 +742,11 @@ a {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .form-container-comment {
   margin-bottom: 16px;
 }
+
 .form-input-com {
   width: 100%;
   height: 120px;
@@ -797,30 +768,17 @@ a {
 .form-input-com:focus {
   border-color: #4d5ae5;
 }
+
 .form-check {
   margin-bottom: 24px;
 }
 
 .input-checkbox:checked + .form-check-text > .symbol-check {
-  background-color: #404bbf;
+  background-color: var(--sky);
   border: none;
-  fill: #fff;
+  fill: var(--white);
 }
 
-.visually-hidden {
-}
-.input-checkbox {
-}
-.form-check-text {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 117%;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  margin-right: 4px;
-  margin-left: 4px;
-  color: #8e8f99;
-}
 .symbol-check {
   width: 16px;
   height: 16px;
@@ -835,15 +793,29 @@ a {
   fill: transparent;
   margin-right: 8px;
 }
+
 .privacy-check {
   fill: #f4f4f4fd;
 }
+
+.form-check-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-right: 4px;
+  margin-left: 4px;
+  color: var(--black);
+}
+
 .priv-link {
   line-height: 133%;
   text-decoration: underline;
   text-decoration-skip-ink: none;
-  color: #4d5ae5;
+  color: var(--blue);
 }
+
 .form-button {
   display: block;
   margin: 0 auto;
@@ -864,52 +836,4 @@ a {
   color: #fff;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-
-  .menu-container {
-  }
-
-  .menu-container.is-open {
-  }
-
-  .menu {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
-
-  .menu-link {
-    display: block;
-    padding: 24px 0;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .burger {
-    display: none;
-  }
-}
-
-@media (min-width: 1158px) {
-  .container {
-    max-width: 1158px;
-    padding: 0 15px;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .header-container {
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
 }
